fix: horizontal scrollbar due to animation overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,12 @@
   --color-light-gray: #f3f2f1;
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--font-bricolage);
   @apply antialiased;
